--- a/public/styles.css
+++ b/public/styles.css
@@ -244,12 +244,12 @@ nav ul li a {
   background-color: var(--black);
 }
 
-.no-project-card{
+.no-project-card {
   width: 100%;
   height: 140px;
 }
 
-.no-project-img{
+.no-project-img {
   width: 100%;
   height: 140px;
 }
@@ -331,7 +331,7 @@ footer h4 {
   margin-bottom: 0;
 }
 
-footer .logo{
+footer .logo {
   width: 15%;
 }
 
@@ -409,134 +409,39 @@ form button:hover {
   background-color: var(--formBtnHover);
 }
 
-
 /* Media Queries */
-
-@media only screen and (max-width: 1032px) {
-  .skill-content {
-    flex-direction: column;
-  }
-  .skill-content img {
-    width: 260px;
-  }
-
-  #skills h3 {
-    margin: 20px 0 15px 0;
-  }
-}
-
-@media only screen and (max-width: 1034px) {
-  .build-container h2 {
-    font-size: 22px;
-  }
-  .build-container p {
-    font-size: 16px;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  h3 {
-    margin: 20px 0 15px 0;
-  }
-  .logo {
-    width: 70px;
-  }
-
-  .introduction {
-    width: 100%;
-    height: 100vh;
-    margin: 0 auto;
-  }
-
-  #hero-img {
-    width: 475px;
-  }
-
-  .introduction h1 {
-    font-size: 5.5rem;
-  }
-
-  .introduction p {
-    font-size: 1.5rem;
-  }
-
-  .myself {
-    width: 100%;
-    padding: 35px 0;
-  }
-
-  .profile-img {
-    width: 230px;
-  }
-
-  .myself h2 {
-    font-size: 41px;
-  }
-
-  .myself p {
-    font-size: 20px;
-    padding: 2px;
-  }
-
-  .project-cards {
-    grid-template-columns: auto;
-  }
-
-  .build-container {
-    display: none;
-  }
-
-  footer {
-    margin-top: 60px;
-  }
-  footer .footer-content {
-    width: 100%;
-  }
-}
-
-@media (min-width: 650px) and (max-width: 1032px) {
-  .project-cards {
-    grid-template-columns: auto auto;
-  }
-}
-
 @media only screen and (max-width: 768px) {
+  nav {
+    height: 100%;
+  }
+
   nav .navbar-content {
     flex-direction: column;
     align-items: center;
   }
-  nav {
-    margin-bottom: 40px;
-  }
-  nav ul li {
-    padding: 12px;
+
+  nav .logo{
+    width: 15%;
   }
 
-  nav ul li a {
+  nav ul li{
+    padding: 15px;
+  }
+
+  .introduction {
+    margin-top: 0px;
+  }
+
+  #hero-img {
+    width: 100%;
+  }
+
+  .introduction h1 {
     font-size: 2rem;
   }
-}
 
-@media (min-width: 768px) and (max-width: 800px) {
-  nav ul {
-    padding-left: 40%;
-  }
-}
-
-@media only screen and (max-width: 710px) {
-  .no-project-card, .no-project-img{
-    height: 210px;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  nav,
-  #hero,
-  #about,
-  #skills,
-  #projects,
-  footer {
-    width: 150%;
+  .introduction p {
+    font-size: 1rem;
   }
 }
 
