--- a/public/styles.css
+++ b/public/styles.css
@@ -451,7 +451,6 @@ form button:hover {
 
   .myself {
     padding: 0;
-    width: 100vw;
   }
 
   .profile-img{
@@ -470,7 +469,6 @@ form button:hover {
 
   .skill-content{
     flex-direction: column;
-    width: 100%;
   }
 
   .skill-content img{
@@ -495,6 +493,10 @@ form button:hover {
 
   footer .footer-content{
     width: 100%;
+  }
+
+  #introduction, #skills, #about, footer{
+    width: 100vw;
   }
 }
 
